src/main/java/com/example/mzaraj/common/error/ErrorConstance.java
package com.example.mzaraj.common.error;


import lombok.AccessLevel;
import lombok.NoArgsConstructor;

@NoArgsConstructor(access = AccessLevel.PRIVATE)
public final class ErrorConstance {

    public static final String ERR_OBJECT_NOT_FOUND = "error.objectNotFound";

}
